--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,17 @@
   "version": "0.1",
 
   "browser_action": {
-    "default_icon": "icon.png",
-    "default_popup": "popup.html",
-    "default_title": "ME ME ME"
+    "default_icon": "app/assets/icon.png",
+    "default_popup": "app/index.html",
+    "default_title": "9GAG Theme"
   },
 
   "content_scripts": [
     {
       "matches": [
-        "<all_urls>"
+        "*://9gag.com/*"
       ],
-      "css": ["themes/dark/theme.css"]
+      "css": ["app/themes/dark/theme.css"]
     }
   ],
 
